--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@
     --color-negro: #1F1F1F;
 }
 
+@media all and (min-width: 320px) {
+    header {
+        background-color: #793de8;
+    }
+}
+
 h2 {
     font-family: 'Rubik', sans-serif;
 }
@@ -81,7 +87,6 @@ main {
 }
 
 .flechasCarrusel {
-    background-color: rgba(85, 174, 110, 0.3);
     height: 100%;
     position: absolute;
     top: 0;
@@ -136,6 +141,29 @@ main {
     margin: 1%;
 }*/
 
+.estrellita {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 161px;
+    height: 150px;
+    margin: -60px 0 0 150px;
+    -webkit-animation: spin 10s linear infinite;
+    -moz-animation: spin 10s linear infinite;
+    animation: spin 10s linear infinite;
+}
+
+/*keyframes*/
+@-webkit-keyframes spin {
+    100%{-webkit-transform: rotate(360deg);}
+}
+@-moz-keyframes spin {
+    100%{-webkit-transform: rotate(360deg);}
+}
+@keyframes spin {
+    100%{-webkit-transform: rotate(360deg);}
+}
+
 .porcelana {
     margin: 1%;
 }
@@ -161,6 +189,12 @@ main {
 .straps:hover {
     width: 40%;
     transition: 0.5s;  
+}
+
+.productosPulseras {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 a {
